Add groups creation. Need to implement tests

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Arepa - Сервис управления X509 сертификатами, состоящий из нескольких микросервисов.
+Arepa - Сервис управления X509 сертификатами, (?) состоящий из нескольких микросервисов (?).
 
 Используемые технологии: Spring Boot + Spring Secure + JPA (Hibernate) + JCA (BouncyCastle) + ...
 
